crates/cli/tests/snapshots/help__set.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"set\", \"--help\"])"
---
Set a cell or range from formula-bar text

Usage: omacell set [OPTIONS] <BOOK> <RANGE> <VALUE>

Arguments:
  <BOOK>   Workbook path
  <RANGE>  A1 cell or range
  <VALUE>  Formula-bar text

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>          Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
