crates/cli/tests/snapshots/help__setup_omarchy.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"setup\", \"omarchy\", \"--help\"])"
---
Install the Omarchy theme template, hook, and skill links

Usage: omacell setup omarchy [OPTIONS]

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --show-hyprland         Print the Hyprland snippet and exit
      --dry-run               Validate writes without changing files
      --menu                  Write Omarchy menu rows (otherwise skipped unless confirmed on a TTY)
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>          Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
