crates/cli/tests/snapshots/help__trust.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"trust\", \"--help\"])"
---
Embedded-script trust store (WP-20)

Usage: omacell trust [OPTIONS] <COMMAND>

Commands:
  add     Grant a file hash
  remove  Revoke a file hash (path or hex)
  list    List trusted hashes

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `$XDG_CONFIG_HOME/omacell/config.toml`
      --theme <FILE>          Explicit Omacell role overlay TOML; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
